--- a/app/service/tsconfig.json
+++ b/app/service/tsconfig.json
@@ -1,7 +1,12 @@
 {
-    "compilerOptions": {
-      "experimentalDecorators": true,
-      "emitDecoratorMetadata": true,
-      "sourceMap": true
-    }
-  }
+  "ts-node": { "transpileOnly": true },
+  "compilerOptions": {
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "sourceMap": true,
+    "moduleResolution": "node"
+  },
+  "exclude": [
+    "node_modules"
+  ]
+}
